--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.2",
     "nes.css": "^2.3.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
